# mdfmt-deprecated

./: Cargo.toml  azure-pipelines.yml  test.md
build_scripts/: PKGBUILD
docs/: README.md  manpage.md
src/: config.rs  formatter.rs  main.rs  parser.rs
test/data/: gfx_notes.md  test.md  test_link_only.md
