[package]
name = "mdfmt"
version = "0.1.2"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
publish = false

[dependencies]
comrak = "0.6.2"
structopt = "0.2.18"
serde = "1.0.97"
serde_derive = "1.0.97"
failure = "0.1.5"
getset = "0.0.7"
regex = "1.2.0"

[profile.release]
lto = true
codegen-units = 1
