[package]
name = "mdfmt"
version = "0.1.5"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
publish = false

[dependencies]
comrak = "0.6.2"
structopt = "0.3.0"
serde = "1.0.97"
serde_derive = "1.0.97"
failure = "0.1.5"
getset = "0.0.8"
regex = "1.3.0"

[profile.release]
lto = true
codegen-units = 1
